--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --col-sec: #203b4d;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --col-sec: #203b4d;
   }
 }
 
