--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --col-sec: #203b4d;
+  color-scheme: light dark;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,6 +17,10 @@
     --background: #ffffff;
     --foreground: #171717;
     --col-sec: #203b4d;
+  }
+  body {
+    background-color: #121212;
+    color: #ffffff;
   }
 }
 
