--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,12 @@ body {
 .markdown > * {
   all: revert;
 }
+
+.markdown p img {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border-radius: 0.375rem; /* equivalent to rounded-md */
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05); /* equivalent to shadow-sm */
+}
